force-app/main/default/objects/CommercientSF__ApSupplier__c/CommercientSF__ApSupplier__c.object-meta.xml
<CustomObject>
    <label>Syspro AP Supplier</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro AP Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>