force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__Account__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Syspro AP Suppliers</relationshipLabel>
    <relationshipName>Syspro_AP_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>