force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__Area__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Area__c</fullName>
    <description>Area</description>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>