force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__AskYtdValue1099__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AskYtdValue1099__c</fullName>
    <description>AskYtdValue1099</description>
    <label>AskYtdValue1099</label>
    <length>255</length>
    <type>Text</type>
</CustomField>