force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__Bank__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Bank__c</fullName>
    <description>Bank</description>
    <label>Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>