force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__BankAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BankAccount__c</fullName>
    <description>BankAccount</description>
    <label>BankAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>