force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__BankBranch__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BankBranch__c</fullName>
    <description>BankBranch</description>
    <label>BankBranch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>