force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__ChLanguage__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ChLanguage__c</fullName>
    <description>ChLanguage</description>
    <label>ChLanguage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>