force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__City__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__City__c</fullName>
    <description>City</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>