force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__CollectTax__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CollectTax__c</fullName>
    <description>CollectTax</description>
    <label>CollectTax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>