force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__Contact__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Contact__c</fullName>
    <description>Contact</description>
    <label>Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>