force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__Contracts__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Contracts__c</fullName>
    <description>Contracts</description>
    <label>Contracts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>