force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__CurrentBalance__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CurrentBalance__c</fullName>
    <description>CurrentBalance</description>
    <label>CurrentBalance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>