force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__DateSuppAdded__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateSuppAdded__c</fullName>
    <description>DateSuppAdded</description>
    <label>DateSuppAdded</label>
    <type>DateTime</type>
</CustomField>