force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__DefaultChequeDay__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DefaultChequeDay__c</fullName>
    <description>DefaultChequeDay</description>
    <label>DefaultChequeDay</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>