force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__EdiFax__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EdiFax__c</fullName>
    <description>EdiFax</description>
    <label>EdiFax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>