force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__EdiTypeFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EdiTypeFlag__c</fullName>
    <description>EdiTypeFlag</description>
    <label>EdiTypeFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>