force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__Email__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Email__c</fullName>
    <description>Email</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>