force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__Fax__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Fax__c</fullName>
    <description>Fax</description>
    <label>Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>