force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__FaxContact__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FaxContact__c</fullName>
    <description>FaxContact</description>
    <label>FaxContact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>