force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__FaxRemitFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FaxRemitFlag__c</fullName>
    <description>FaxRemitFlag</description>
    <label>FaxRemitFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>