force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__FaxVoucherFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FaxVoucherFlag__c</fullName>
    <description>FaxVoucherFlag</description>
    <label>FaxVoucherFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>