force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__FirstPurchDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FirstPurchDate__c</fullName>
    <description>FirstPurchDate</description>
    <label>FirstPurchDate</label>
    <type>DateTime</type>
</CustomField>