force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__FreightGlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FreightGlCode__c</fullName>
    <description>FreightGlCode</description>
    <label>FreightGlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>