force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__GrnMatchReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GrnMatchReqd__c</fullName>
    <description>GrnMatchReqd</description>
    <label>GrnMatchReqd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>