force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__LastCheque__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastCheque__c</fullName>
    <description>LastCheque</description>
    <label>LastCheque</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>