force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__LastChequeBank__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastChequeBank__c</fullName>
    <description>LastChequeBank</description>
    <label>LastChequeBank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>