force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__LastChequeDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastChequeDate__c</fullName>
    <description>LastChequeDate</description>
    <label>LastChequeDate</label>
    <type>DateTime</type>
</CustomField>