force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__LastChequePrint__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastChequePrint__c</fullName>
    <description>LastChequePrint</description>
    <label>LastChequePrint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>