force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__LastChequeVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastChequeVal__c</fullName>
    <description>LastChequeVal</description>
    <label>LastChequeVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>