force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__LastPurchDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastPurchDate__c</fullName>
    <description>LastPurchDate</description>
    <label>LastPurchDate</label>
    <type>DateTime</type>
</CustomField>