force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__LctRequired__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LctRequired__c</fullName>
    <description>LctRequired</description>
    <label>LctRequired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>