force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MerchGlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MerchGlCode__c</fullName>
    <description>MerchGlCode</description>
    <label>MerchGlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>