force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MinPay1099__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MinPay1099__c</fullName>
    <description>MinPay1099</description>
    <label>MinPay1099</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>