force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MinPoMass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MinPoMass__c</fullName>
    <description>MinPoMass</description>
    <label>MinPoMass</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>