force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MinPoVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MinPoVal__c</fullName>
    <description>MinPoVal</description>
    <label>MinPoVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>