force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MinPoVolume__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MinPoVolume__c</fullName>
    <description>MinPoVolume</description>
    <label>MinPoVolume</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>