force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MtdDsbVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdDsbVal__c</fullName>
    <description>MtdDsbVal</description>
    <label>MtdDsbVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>