force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MtdFreightVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdFreightVal__c</fullName>
    <description>MtdFreightVal</description>
    <label>MtdFreightVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>