force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MtdMerchVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdMerchVal__c</fullName>
    <description>MtdMerchVal</description>
    <label>MtdMerchVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>