force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MtdOtherVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdOtherVal__c</fullName>
    <description>MtdOtherVal</description>
    <label>MtdOtherVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>