force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MtdTax2Val__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdTax2Val__c</fullName>
    <description>MtdTax2Val</description>
    <label>MtdTax2Val</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>