force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MtdTaxReliefVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdTaxReliefVal__c</fullName>
    <description>MtdTaxReliefVal</description>
    <label>MtdTaxReliefVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>