force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__MtdTaxVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MtdTaxVal__c</fullName>
    <description>MtdTaxVal</description>
    <label>MtdTaxVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>