force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__NumMonthsZero__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NumMonthsZero__c</fullName>
    <description>NumMonthsZero</description>
    <label>NumMonthsZero</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>