force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__NumMthsBeforDel__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NumMthsBeforDel__c</fullName>
    <description>NumMthsBeforDel</description>
    <label>NumMthsBeforDel</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>