force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__OnHold__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OnHold__c</fullName>
    <description>OnHold</description>
    <label>OnHold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>