force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__PayByEft__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PayByEft__c</fullName>
    <description>PayByEft</description>
    <label>PayByEft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>