force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__PoDefaultDoc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PoDefaultDoc__c</fullName>
    <description>PoDefaultDoc</description>
    <label>PoDefaultDoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>