force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__PurchOrdAllowed__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PurchOrdAllowed__c</fullName>
    <description>PurchOrdAllowed</description>
    <label>PurchOrdAllowed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>