force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__PurchValMth10__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PurchValMth10__c</fullName>
    <description>PurchValMth10</description>
    <label>PurchValMth10</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>