force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__PurchValMth11__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PurchValMth11__c</fullName>
    <description>PurchValMth11</description>
    <label>PurchValMth11</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>