force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__PurchValMth12__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PurchValMth12__c</fullName>
    <description>PurchValMth12</description>
    <label>PurchValMth12</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>