force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__Pyr1099Val__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Pyr1099Val__c</fullName>
    <description>Pyr1099Val</description>
    <label>Pyr1099Val</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>