force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__PyrDsbVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PyrDsbVal__c</fullName>
    <description>PyrDsbVal</description>
    <label>PyrDsbVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>