force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__PyrEndBalance__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PyrEndBalance__c</fullName>
    <description>PyrEndBalance</description>
    <label>PyrEndBalance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>