force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__PyrFreightVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PyrFreightVal__c</fullName>
    <description>PyrFreightVal</description>
    <label>PyrFreightVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>