force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__PyrMerchVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PyrMerchVal__c</fullName>
    <description>PyrMerchVal</description>
    <label>PyrMerchVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>