force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__PyrOtherVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PyrOtherVal__c</fullName>
    <description>PyrOtherVal</description>
    <label>PyrOtherVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>