force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__RemitEmail__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RemitEmail__c</fullName>
    <description>RemitEmail</description>
    <label>RemitEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>