force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__Required1099__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Required1099__c</fullName>
    <description>Required1099</description>
    <label>Required1099</label>
    <length>255</length>
    <type>Text</type>
</CustomField>