force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__ShippingLocation__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ShippingLocation__c</fullName>
    <description>ShippingLocation</description>
    <label>ShippingLocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>