force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__SupplierChName__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupplierChName__c</fullName>
    <description>SupplierChName</description>
    <label>SupplierChName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>