force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__SupplierClass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupplierClass__c</fullName>
    <description>SupplierClass</description>
    <label>SupplierClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>