force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__SupplierName__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupplierName__c</fullName>
    <description>SupplierName</description>
    <label>SupplierName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>