force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__SupplierType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupplierType__c</fullName>
    <description>SupplierType</description>
    <label>SupplierType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>