force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__SupShortName__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupShortName__c</fullName>
    <description>SupShortName</description>
    <label>SupShortName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>