force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__Syspro_AP_Supplier_Address__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_AP_Supplier_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro AP Supplier Address</label>
    <referenceTo>CommercientSF__ApSupplierAddr__c</referenceTo>
    <relationshipLabel>Syspro AP Suppliers</relationshipLabel>
    <relationshipName>Syspro_AP_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>