force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__TaxRegnNum__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxRegnNum__c</fullName>
    <description>TaxRegnNum</description>
    <label>TaxRegnNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>