force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__TermsCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TermsCode__c</fullName>
    <description>TermsCode</description>
    <label>TermsCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>