force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__TransactionNature__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TransactionNature__c</fullName>
    <description>TransactionNature</description>
    <label>TransactionNature</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>