force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__YtdDsbVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__YtdDsbVal__c</fullName>
    <description>YtdDsbVal</description>
    <label>YtdDsbVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>