force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__YtdFreightVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__YtdFreightVal__c</fullName>
    <description>YtdFreightVal</description>
    <label>YtdFreightVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>