force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__YtdMerchVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__YtdMerchVal__c</fullName>
    <description>YtdMerchVal</description>
    <label>YtdMerchVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>