force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__YtdOtherVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__YtdOtherVal__c</fullName>
    <description>YtdOtherVal</description>
    <label>YtdOtherVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>