force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__YtdTax2Val__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__YtdTax2Val__c</fullName>
    <description>YtdTax2Val</description>
    <label>YtdTax2Val</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>