force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__YtdTaxReliefVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__YtdTaxReliefVal__c</fullName>
    <description>YtdTaxReliefVal</description>
    <label>YtdTaxReliefVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>