force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/CommercientSF__YtdTaxVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__YtdTaxVal__c</fullName>
    <description>YtdTaxVal</description>
    <label>YtdTaxVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>