force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/deftaxcode__c.field-meta.xml
<CustomField>
    <fullName>deftaxcode__c</fullName>
    <label>DefTaxCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>