force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/deliveryterms__c.field-meta.xml
<CustomField>
    <fullName>deliveryterms__c</fullName>
    <label>DeliveryTerms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>