force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/edireceivercode__c.field-meta.xml
<CustomField>
    <fullName>edireceivercode__c</fullName>
    <label>EdiReceiverCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>