force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/eftbankacctype__c.field-meta.xml
<CustomField>
    <fullName>eftbankacctype__c</fullName>
    <label>EftBankAccType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>