force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/faxremitnum__c.field-meta.xml
<CustomField>
    <fullName>faxremitnum__c</fullName>
    <label>FaxRemitNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>