force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/faxvouchernum__c.field-meta.xml
<CustomField>
    <fullName>faxvouchernum__c</fullName>
    <label>FaxVoucherNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>