force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/invdisccode__c.field-meta.xml
<CustomField>
    <fullName>invdisccode__c</fullName>
    <label>InvDiscCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>