force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/languagecode__c.field-meta.xml
<CustomField>
    <fullName>languagecode__c</fullName>
    <label>LanguageCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>