force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/linedisccode__c.field-meta.xml
<CustomField>
    <fullName>linedisccode__c</fullName>
    <label>LineDiscCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>