force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/outofstate__c.field-meta.xml
<CustomField>
    <fullName>outofstate__c</fullName>
    <label>OutOfState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>