force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/payeref1099__c.field-meta.xml
<CustomField>
    <fullName>payeref1099__c</fullName>
    <label>PayeRef1099</label>
    <length>255</length>
    <type>Text</type>
</CustomField>