force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/reservedforusa__c.field-meta.xml
<CustomField>
    <fullName>reservedforusa__c</fullName>
    <label>ReservedForUsa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>