force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/Syspro_AR_Branch__c.field-meta.xml
<CustomField>
    <fullName>Syspro_AR_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro AR Branch</label>
    <referenceTo>CommercientSF__SalBranch__c</referenceTo>
    <relationshipLabel>Syspro AP Suppliers</relationshipLabel>
    <relationshipName>Syspro_AP_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>