force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/Syspro_Area__c.field-meta.xml
<CustomField>
    <fullName>Syspro_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Area</label>
    <referenceTo>CommercientSF__SalArea__c</referenceTo>
    <relationshipLabel>Syspro AP Suppliers</relationshipLabel>
    <relationshipName>Syspro_AP_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>