force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/voucheremail__c.field-meta.xml
<CustomField>
    <fullName>voucheremail__c</fullName>
    <label>VoucherEmail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>