force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/withtaxcode__c.field-meta.xml
<CustomField>
    <fullName>withtaxcode__c</fullName>
    <label>WithTaxCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>