force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/withtaxexpensetype__c.field-meta.xml
<CustomField>
    <fullName>withtaxexpensetype__c</fullName>
    <label>WithTaxExpenseType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>