force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/withtaxid__c.field-meta.xml
<CustomField>
    <fullName>withtaxid__c</fullName>
    <label>WithTaxId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>