force-app/main/default/objects/CommercientSF__ApSupplier__c/fields/withtaxsupplierind__c.field-meta.xml
<CustomField>
    <fullName>withtaxsupplierind__c</fullName>
    <label>WithTaxSupplierInd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>